# MediaLaboratory

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cz/android/media/laboratory/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/cz/android/media/laboratory/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/cz/android/media/laboratory/: ExampleUnitTest.kt
ffmpeg-audio/: build.gradle
ffmpeg-audio/src/androidTest/java/com/cz/android/media/ffmpeg/audio/: ExampleInstrumentedTest.kt
ffmpeg-audio/src/main/: AndroidManifest.xml
ffmpeg-audio/src/main/cpp/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  audio-lib.cpp
ffmpeg-audio/src/main/java/com/cz/android/media/ffmpeg/audio/: AudioPlayer.java  AudioSampleActivity.kt  MainActivity.kt
ffmpeg-audio/src/main/java/com/cz/android/media/ffmpeg/audio/decode/: AudioPlayer.java
ffmpeg-audio/src/main/java/com/cz/android/media/ffmpeg/audio/utils/: Util.java
ffmpeg-audio/src/main/java/com/cz/android/media/ffmpeg/audio/view/: DefaultTextFormatter.java  MusicPlayerView.java  OnPlayPauseToggleListener.java  PlayPauseDrawable.java  TextFormatter.java
ffmpeg-audio/src/main/res/layout/: activity_audio_sample.xml
ffmpeg-audio/src/main/res/values/: attrs.xml  strings.xml
ffmpeg-audio/src/test/java/com/cz/android/media/ffmpeg/audio/: ExampleUnitTest.kt
ffmpeg-video/: build.gradle
ffmpeg-video/src/androidTest/java/com/cz/android/media/ffmpeg/video/: ExampleInstrumentedTest.kt
ffmpeg-video/src/main/: AndroidManifest.xml
ffmpeg-video/src/main/cpp/: CMakeLists.txt  VideoPlayer.cpp  VideoPlayer.h  video-lib.cpp  video-test-lib.cpp
ffmpeg-video/src/main/java/com/cz/android/media/ffmpeg/video/: MainActivity.kt
ffmpeg-video/src/main/java/com/cz/android/media/ffmpeg/video/image/: VideoFrameGalleryActivity.kt  VideoGallery.java  (+1 more)
ffmpeg-video/src/main/res/drawable/: player_button_selector.xml  player_play_selector.xml
ffmpeg-video/src/main/res/drawable-v21/: player_button_selector.xml
ffmpeg-video/src/main/res/layout/: activity_audio_sample.xml  activity_video_frame_gallery.xml  activity_video_image_sample.xml  activity_video_player.xml  image_layout.xml
ffmpeg-video/src/main/res/values/: dimens.xml  strings.xml
ffmpeg-video/src/test/java/com/cz/android/media/ffmpeg/video/: ExampleUnitTest.kt
ffmpeg/include/libavformat/: avformat.h
ffmpeg/include/libavutil/: avstring.h  channel_layout.h  hwcontext.h  opt.h  parseutils.h
gradle/wrapper/: gradle-wrapper.properties
scripts/: prepare.gradle
source/: audio-player-lib.cpp  consumeAndProducer.cpp  video-player-lib.cpp
(+9 files in other folders)
